--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,8 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api" // java.lang.NoClassDefFoundError (javax.annotation.Entity) 대응 코드
 	// querydsl 추가 끝
 
+	implementation 'org.springframework.kafka:spring-kafka'
+
 	// SQL 실행 파라미터 로그 기능 추가 시작
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
 	// SQL 실행 파라미터 로그 기능 추가 끝
